# synthbrain

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
outputs/samples/: BEST_TRAINING.md  finalize_results.json  gpu_best_net.npz  readout_results.json  sweep_wave1_results.json  sweep_wave2_results.json  sweep_wave3_results.json  sweep_wave4_results.json
scripts/: _check_gain.py  _check_inhibition.py  _check_torch_equiv.py  animate_network.py  demo_network.py  finalize_eval.py  readout_experiment.py  reproduce_tiny.py  scaleup_network.py  sweep_receptive_fields.py  train_gpu.py  train_mnist.py  verify_encoding.py  verify_lif.py  verify_stdp.py  verify_synapses.py
synthbrain/: __init__.py  encoding.py  lif.py  network.py  stdp.py  synapses.py  torch_snn.py
tests/: test_core.py  test_network.py  test_torch_snn.py
